[project]
name = "asari-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "asari>=0.2.0",
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.1",
]
